Parte del sistema mqtt, hay varios issues para resolver.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
 idf_component_register(SRCS "app_main.c"
-                    INCLUDE_DIRS ".")
+                            "mqtt_app.c" 
+                      INCLUDE_DIRS "."
+                      REQUIRES esp_wifi wifi_provisioning nvs_flash mqtt)
