Encendido de leds remoto completamente funcional

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,9 @@
 idf_component_register(SRCS "app_main.c"
                             "mqtt_app.c" 
                       INCLUDE_DIRS "."
-                      REQUIRES esp_wifi wifi_provisioning nvs_flash mqtt)
+                      REQUIRES 
+                      esp_wifi 
+                      wifi_provisioning 
+                      nvs_flash 
+                      mqtt 
+                      driver)
